# pdi-fich2015

./: .gitignore  README.md
PARCIAL/Parcial Recuperatorio/: Parcial2015_leeDir.cpp
PARCIAL/parcial-cris/parcial-cris/: CMakeLists.txt  main.cpp
PARCIAL/parcial-lucho/parcial-lucho/: CMakeLists.txt  main.cpp
PARCIAL/parcial-rena/parcial-rena/: CMakeLists.txt  main.cpp
Paractica 1/Ejercicio 0/ejer0/: CMakeLists.txt
Paractica 1/Ejercicio 1/ejer1/: main.cpp
Paractica 1/Ejercicio 2/ejer2/: CMakeLists.txt  main.cpp
Paractica 1/Ejercicio 3/ejer3/: main.cpp
Paractica 1/Ejercicio 4/ejer4/: CMakeLists.txt  main.cpp
Paractica 1/Ejercicio 5/ejer5/: CMakeLists.txt
Paractica 1/Ejercicio 6/ejer6/: CMakeLists.txt  main.cpp
Paractica 1/Ejercicio 7/ejer7/: CMakeLists.txt  main.cpp  pasar_medios_tonos.h
Paractica 1/Ejercicio 8/ejer8/: CMakeLists.txt  main.cpp  pasar_binario.h  procesar_botellas.h
Parcial de Practica/Billetes/billetes/: CMakeLists.txt  main.cpp
Parcial de Practica/Cervezas/cerveza/: main.cpp
Parcial de Practica/Escaner/: Ejercicio.txt  Ejercicio.txt~
Parcial de Practica/Moscas/: Recuperatorio.cpp  Recuperatorio.zpr
Parcial de Practica/tormentas/: Enunciado.txt
Practica 1/Ejercicio 0/ejer0/: CMakeLists.txt
Practica 1/Ejercicio 2/ejer2/: CMakeLists.txt  main.cpp
Practica 1/Ejercicio 3/ejer3/: CMakeLists.txt
Practica 1/Ejercicio 5/ejer5/: main.cpp
Practica 1/Ejercicio 6/ejer6/: CMakeLists.txt  main.cpp
Practica 1/Ejercicio 7/ejer7/: CMakeLists.txt  pasar_medios_tonos.h
Practica 1/Ejercicio 8/ejer8/: CMakeLists.txt  procesar_botellas.h
Practica 2/Ejercicio 1/ejer1/: CMakeLists.txt  lut.h  main.cpp
Practica 2/Ejercicio 2/ejer2/: CMakeLists.txt  main.cpp
Practica 2/Ejercicio 2/ejer2-build/: ejer2
Practica 2/Ejercicio 3-2/ejer3-2/: CMakeLists.txt  main.cpp
Practica 2/Ejercicio 3/ejer3/: CMakeLists.txt  main.cpp
Practica 2/Ejercicio 4/ejer4/: CMakeLists.txt  main.cpp
Practica 2/Ejercicio 5/ejer5/: CMakeLists.txt  main.cpp
Practica 2/Ejercicio 6/ejer6/: CMakeLists.txt  main.cpp
Practica 2/Ejercicio 7-2/ejer7-2/: CMakeLists.txt  main.cpp
Practica 2/Ejercicio 7-3/ejer7-3/: CMakeLists.txt  main.cpp
Practica 2/Ejercicio 7-4/ejer7-4/: CMakeLists.txt  main.cpp
Practica 2/Ejercicio 7/ejer7/: CMakeLists.txt
Practica 2/Ejercicio 7/ejer7-1/: CMakeLists.txt  main.cpp
Practica 3/Ejer5-2/: CMakeLists.txt
Practica 3/Ejercicio 1/ejer1/: CMakeLists.txt  main.cpp
Practica 3/Ejercicio 2/Ejer2/: CMakeLists.txt  main.cpp
Practica 3/Ejercicio 3/ejer3/: CMakeLists.txt  main.cpp
Practica 3/Ejercicio 4/ejer4/: CMakeLists.txt  main.cpp
Practica 3/Ejercicio 5-1/ejer5-1/: CMakeLists.txt  main.cpp
Practica 3/Ejercicio 5-2/ejer5-2/: CMakeLists.txt  main.cpp
Practica 3/Ejercicio 5-3/ejer5-3/: CMakeLists.txt  main.cpp
Practica 4/Ejercicio 1-2/ejer1-2/: CMakeLists.txt
Practica 4/Ejercicio 1/ejer1/: CMakeLists.txt  main.cpp
Practica 4/Ejercicio 2/ejer2/: CMakeLists.txt  main.cpp
Practica 4/Ejercicio 3/ejer3/: CMakeLists.txt  main.cpp
Practica 4/Ejercicio 4/ejer4/: CMakeLists.txt  main.cpp
Practica 4/Ejercicio 5/ejer5/: CMakeLists.txt  main.cpp
Practica 4/Ejercicio 5/ejer6/: CMakeLists.txt  main.cpp
Practica 4/Ejercicio 6/ejer6/: CMakeLists.txt  main.cpp
Practica 4/prueba/prueba/: CMakeLists.txt
Practica 5/Ejercicio 1-3/ejer1-3/: CMakeLists.txt  main.cpp
Practica 5/Ejercicio 1/ejer1/: CMakeLists.txt  main.cpp
Practica 5/Ejercicio 2/ejer2/: CMakeLists.txt  main.cpp
Practica 5/Ejercicio 3/: main.cpp
Practica 5/Ejercicio 3/ejer3/: CMakeLists.txt  main.cpp
Practica 5/Ejercicio 4/ejer4/: CMakeLists.txt  main.cpp
Practica 5/Ejercicio 5/ejer5/: CMakeLists.txt  main.cpp
Practica 5/Ejercicio 6/ejer6/: main.cpp
Practica 5/Ejercicio 7/ejer7/: main.cpp
Practica 6/Ejercicio 1/ejer1/: CMakeLists.txt  main.cpp
Practica 6/Ejercicio 2/ejer2/: main.cpp
Practica 6/Ejercicio 3/ejer3/: main.cpp
Practica 6/Ejercicio 4/ejer4/: CMakeLists.txt  main.cpp
Practica 6/Ejercicio 5/ejer5/: CMakeLists.txt  main.cpp
Practica 6/Ejercicio 6/ejer6/: main.cpp
Practica 6/Ejercicio 7/ejer7/: CMakeLists.txt
Practica 7/Ejercicio 1/ejer1/: CMakeLists.txt  main.cpp
Practica 7/Ejercicio 2-1/ejer2-1/: CMakeLists.txt  main.cpp
Practica 7/Ejercicio 2-2/ejer2-2/: CMakeLists.txt  main.cpp
Practica 7/Ejercicio 3/ejer3/: CMakeLists.txt  main.cpp
Practica 7/Ejercicio 4/ejer4/: CMakeLists.txt  main.cpp
Practica 7/Ejercicio 5-1/ejer5-1/: CMakeLists.txt  main.cpp
Practica 7/Ejercicio 5-2/ejer5-2/: CMakeLists.txt  main.cpp
Practica 8/Ejercicio 1/ejer1/: CMakeLists.txt  main.cpp
Practica 8/Ejercicio 2/ejer2/: CMakeLists.txt  main.cpp
Practica 8/Ejercicio 2/scaner-cristian/: CMakeLists.txt  main.cpp
Practica 8/Ejercicio 3-1/ejer3-1/: CMakeLists.txt  main.cpp
Practica 8/Ejercicio 3-2/ejer3-2/: CMakeLists.txt  main.cpp
Practica 8/Ejercicio 3-3/ejer3-3/: CMakeLists.txt  main.cpp
Practica 8/Ejercicio 3/ejer3/: main.cpp
Practica 8/Ejercicio 4/ejer4/: CMakeLists.txt  main.cpp
Practica 8/Ejercicio 5/ejer5/: CMakeLists.txt  main.cpp
Practica 8/Ejercicio 6/ejer6/: CMakeLists.txt  main.cpp
Practica 8/Ejercicio 7/ejer7/: CMakeLists.txt  main.cpp
Practica 8/Ejercicio 8/ejer8/: CMakeLists.txt  main.cpp
Practica 8/inundar-test/inundar/: CMakeLists.txt  main.cpp
Practica 8/morfologia-test/test/: CMakeLists.txt  main.cpp
Pruebas Parcial/Ecualizacion y Alta potencia/prueba/: CMakeLists.txt  main.cpp
Pruebas Parcial/Filtrado mascaras/filtrado/: CMakeLists.txt  main.cpp
Pruebas Parcial/Hough-Circular-Ejemplo/hough-circular/: CMakeLists.txt  main.cpp
Pruebas Parcial/Multiples Luts/prueba4/: main.cpp  (+1 more)
TP Final/tpfinal/: CMakeLists.txt  main.cpp
Test qtcreator/Puebita/: CMakeLists.txt  main.cpp
Tests/Test qtcreator/Puebita/: CMakeLists.txt  main.cpp
Tests/test cris/: wors.cpp
funciones/: CImg.h  PDI_functions.h  funciones.h  funciones.h.autosave  skeleton.h
funciones/plugins/: skeleton.h
funciones/quadprog/: main.cc
images/: botellas2.tif
images/TP/: aerial.tif  mars.tif
test/: wors  wors.cpp  wors.cpp~
(+59 files in other folders)
